<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preferences_category_1_txt">

        <EditTextPreference
            android:key="edt_pref_movies_apikey"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="TheMovieDB API Key" />
        <EditTextPreference
            android:key="edt_pref_firebase_apikey"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Firebase API Key (for Translation)" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preferences_category_2_txt">

        <SwitchPreferenceCompat
            android:id="@+id/swc_prefs_allow_adult"
            app:key="swc_prefs_allow_adult"
            app:title="@string/preferences_allow_adult_txt" />

    </PreferenceCategory>

</PreferenceScreen>